fix: Fix mobile modal center alignment

--- a/client/Components/Modal/Modal.module.css
+++ b/client/Components/Modal/Modal.module.css
@@ -89,12 +89,6 @@
   color: var(--color-base);
 }
 
-@media (--mobile) {
-  .wrapper {
-    align-items: flex-end;
-  }
-}
-
 @keyframes ModalFadeIn {
   0% {
     opacity: 0;
