--- a/client/Pages/PageProduct/elements/FeatureItem/FeatureItem.module.css
+++ b/client/Pages/PageProduct/elements/FeatureItem/FeatureItem.module.css
@@ -121,7 +121,7 @@
     line-height: var(--lh-n);
   }
 
-  .iconPlay {
+  .videoContainer .iconPlay {
     opacity: 0;
   }
 }
